test/expected/define_eti.out
define SI as extern int
             ^
14: error: "typedef extern int" is illegal for built-in type
